--- a/_data/okiwi.yml
+++ b/_data/okiwi.yml
@@ -46,6 +46,9 @@ membres_cotisants:
     - nom: Aimetti
       prenom: Fabrice
 
+    - nom: Faure
+      prenom: Frédéric
+
 bureau:
     - fonction: Héraut
       nom: Dusseaut
@@ -79,11 +82,11 @@ bureau:
       nom: Garriga-Salaün
       prenom: Colin
 
-montant_dons: 190
+montant_dons: 260
 
 montant_frais_fixes: 250
 
-pourcentage_cotisations: 76
+pourcentage_cotisations: 100
 
 age: 8
 
