--- a/_data/okiwi.yml
+++ b/_data/okiwi.yml
@@ -1,42 +1,9 @@
 ---
-date_assemblee_generale: 2013-04-26T19:00:00+01:00
+date_assemblee_generale: 2014-03-03T19:00:00+01:00
 
-date_lisible: 26 avril 2013
+date_lisible: 03 mars 2014
 
 membres_cotisants:
-    - nom: Cranford
-      prenom: Sam
-
-    - nom: Heral
-      prenom: Christophe
-
-    - nom: Bousquié
-      prenom: Pierre
-
-    - nom: Grange
-      prenom: Pascal
-
-    - nom: Vincent
-      prenom: Guillaume
-
-    - nom: Hanna
-      prenom: Samir
-
-    - nom: Garriga-Salaün
-      prenom: Colin
-
-    - nom: Kleber
-      prenom: Aldrik
-
-    - nom: Mouton
-      prenom: David
-
-    - nom: Li
-      prenom: Zhe
-
-    - nom: Piac
-      prenom: Michel
-
     - nom: Varron
       prenom: Damien
 
@@ -49,44 +16,44 @@ membres_cotisants:
     - nom: Faure
       prenom: Frédéric
 
-bureau:
-    - fonction: Héraut
-      nom: Dusseaut
-      prenom: Jean-Baptiste
+    - nom: Gallay
+      prenom: Bastien
 
-    - fonction: Vice-Secrétaire
-      nom: Billette
-      prenom: Millicent
+    - nom: Monville
+      prenom: Alexis
 
-    - fonction: Vice-Trésorier
-      nom: Grange
+    - nom: Garriga-Salaün
+      prenom: Colin
+
+    - nom: Grange
       prenom: Pascal
 
-    - fonction: Vice-Président
+    - nom: Vincent
+      prenom: Guillaume
+
+    - nom: Ledard
+      prenom: Arthur
+
+
+bureau:
+    - fonction: Président
       nom: Cranford
       prenom: Sam
 
-    - fonction: Gérant de la communauté
+    - fonction: Secrétaire
       nom: Bousquié
       prenom: Pierre
-
-    - fonction: Secrétaire
-      nom: Hanna
-      prenom: Samir
 
     - fonction: Trésorier
       nom: Vincent
       prenom: Guillaume
 
-    - fonction: Président
-      nom: Garriga-Salaün
-      prenom: Colin
 
-montant_dons: 260
+montant_dons: 60
 
 montant_frais_fixes: 250
 
-pourcentage_cotisations: 100
+pourcentage_cotisations: 24
 
 age: 8
 
